# FactorioSynthesis

./: Dependency.py  Grid.py  Tile.py  create_blueprint.py  main.py  place.py  placer2.py  visualise.py
rust/: Cargo.toml
rust/src/: astar.rs  bounds.rs  building.rs  entity.rs  grid.rs  main.rs  position.rs  recipes.rs  rotation.rs  spring_system.rs  synthesize.rs  tree_generator.rs
