[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
flate2 = "1.0.24"
base64 = "0.13.1"
priority-queue = "1.3.0"